--- a/public/css/table.css
+++ b/public/css/table.css
@@ -6,14 +6,90 @@ table, td, th {
 table {
 	height: 10px;
 	border-collapse: collapse;
+	overflow: visible;
 }
 
 td {
 	text-align: center;
 }
 
+tr:hover {
+	background-color: #ffa;
+}
+
+td, th {
+  position: relative;
+}
+td:hover::after,
+th:hover::after {
+  content: "";
+  position: absolute;
+  background-color: #ffa;
+  left: 0;
+  top: -5000px;
+  height: 10000px;
+  width: 100%;
+  z-index: -1;
+}
+
 /* Color */
 .invalid {
 	background-color: black;
 	color: white;
+}
+
+.scorigami {
+	background-color: green;
+}
+
+.scorigami:hover {
+	background-color: darkgreen;
+}
+
+/* Tooltip */
+.tooltip {
+    /*position: relative;*/
+    /*display: inline-block;*/
+    /*border-bottom: 1px dotted black;*/
+	width: 100%;
+	height: 17px;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 250px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    /* Position the tooltip */
+	top: -25px;
+    left: 145%;
+    position: absolute;
+    z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+.tooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    top: 50%;
+    right: 100%; /* To the left of the tooltip */
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+}
+
+.tooltip a {
+	color: lightblue;
+}
+
+.tooltip a:visited {
+	color: cornflowerblue;
 }
