--- a/public/css/table.css
+++ b/public/css/table.css
@@ -14,9 +14,15 @@
 	font-size:2em;
 }
 
+#x-axis {
+    transform: translate(45px, 35px)
+}
+
 #y-axis {
-	transform: rotate(-90deg);
 	transform-origin: left 25% 0;
+    transform: 
+        translate(5px, 420px)
+        rotate(-90deg);
 }
 
 table, td, th {
@@ -25,9 +31,11 @@ table, td, th {
 }
 
 table {
-	height: 10px;
 	border-collapse: collapse;
-	overflow: visible;
+    display: block;
+	overflow: auto;
+    margin-left: 25px;
+    margin-right: 90%
 }
 
 td {
@@ -48,7 +56,7 @@ td, th {
 /* Rotate Table Headers */
 
 th.rotate {
-    height: 50px;
+    height: 25px;
     white-space: nowrap;
 }
 
